add posted column

--- a/app/templates/basic.html
+++ b/app/templates/basic.html
@@ -10,6 +10,7 @@
                         <th>URL</th>
                         <th>K8S Version</th>
                         <th>Expire Date</th>
+                        <th>Posted Time</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -18,6 +19,7 @@
                             <td>{{ info.url }}</td>
                             <td>{{ info.k8sver }}</td>
                             <td>{{ info.expire_date }}</td>
+                            <td>{{ info.posted }}</td>
                         </tr>
                     {% endfor %}
             </table>
