--- a/app/templates/basic.html
+++ b/app/templates/basic.html
@@ -9,6 +9,7 @@
                     <tr>
                         <th>URL</th>
                         <th>K8S Version</th>
+                        <th>IP Address</th>
                         <th>Expire Date</th>
                         <th>Posted Time</th>
                     </tr>
@@ -18,6 +19,7 @@
                         <tr>
                             <td>{{ info.url }}</td>
                             <td>{{ info.k8sver }}</td>
+                            <td>{{ info.ipaddress }}</td>
                             <td>{{ info.expire_date }}</td>
                             <td>{{ info.posted }}</td>
                         </tr>
